@startuml

title __COUNTRY's Class Diagram__\n

  namespace be.kuleuven.travelrecipe {
    namespace models.country {
      abstract class be.kuleuven.travelrecipe.models.country.AbstractCountries {
          + setCountryActivityNotifier()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.country {
      class be.kuleuven.travelrecipe.models.country.Countries {
          - countries : List<Country>
          - userid : int
          + Countries()
          + getCountries()
          + getUserid()
          + setCountries()
          + setCountries()
          + setUserid()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.country {
      class be.kuleuven.travelrecipe.models.country.Country {
          - actived : boolean
          - continent : int
          - countryImg : int
          - countryName : String
          - recipeNumber : int
          + Country()
          + getContinent()
          + getCountryImg()
          + getCountryName()
          + getRecipeNumber()
          + isActived()
          + setActived()
          + setContinent()
          + setCountryImg()
          + setCountryName()
          + setRecipeNumber()
      }
    }
  }
  

  be.kuleuven.travelrecipe.models.country.AbstractCountries o-- be.kuleuven.travelrecipe.notifier.CountryActivityNotifier : countryActivityNotifier
  be.kuleuven.travelrecipe.models.country.Countries -up-|> be.kuleuven.travelrecipe.models.country.AbstractCountries


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
